Alignment issue all resolved

--- a/TechGuyz/zerotype/zerotype/css/style.css
+++ b/TechGuyz/zerotype/zerotype/css/style.css
@@ -475,3 +475,7 @@ p a {
 #connect a.tumbler:hover {
 	background-position: -40px -120px;
 }
+
+#right {
+	text-align: right;
+}
